Changes from sonar findings and env variable added to core build.gradle to run outside of parent project